--- a/styles/base.css
+++ b/styles/base.css
@@ -24,11 +24,12 @@
 
 ::-webkit-scrollbar {
     width: 10px;
+    background-color: #bfc8d7;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: gray;
-    border-radius: 8px;
+    border-radius: 10px;
+    background-color: #75839e;
 }
 
 *,
